--- a/api/external/api-restore-v2.yaml
+++ b/api/external/api-restore-v2.yaml
@@ -57,21 +57,13 @@ definitions:
         enum:
           - CR
           - IR
+          - FLR
         x-access-port: 25081
         x-auth-required: 'Y'
         x-public-api: 'Y'
         x-dp-admin-role: 'Y'
         x-sysadmin-role: 'Y'
-      subObjects:
-        type: array
-        items:
-          type: string
-        description: |-
-          恢复子对象列表，细粒度恢复时指定要具体恢复的子对象，如
-          恢复子对象列表，细粒度恢复时指定要具体恢复的子对象，如：
-          1、文件系统恢复时可以指定只恢复哪些目录
-          2、虚拟机恢复时指定恢复哪些磁盘
-          3、数据库实例恢复时指定恢复实例下的某个数据库
+        x-impact-subsystem: 不影响
       targetLocation:
         type: string
         description: '恢复的目标位置，original - 原位置，new - 新位置, native-恢复到A8000本机'
@@ -82,6 +74,16 @@ definitions:
         x-access-port: 25081
         x-auth-required: 'Y'
         x-public-api: 'Y'
+      subObjects:
+        type: array
+        items:
+          type: string
+        description: |-
+          恢复子对象列表，细粒度恢复时指定要具体恢复的子对象，如
+          恢复子对象列表，细粒度恢复时指定要具体恢复的子对象，如：
+          1、文件系统恢复时可以指定只恢复哪些目录
+          2、虚拟机恢复时指定恢复哪些磁盘
+          3、数据库实例恢复时指定恢复实例下的某个数据库
       targetEnv:
         type: string
         description: 恢复的目标环境的ID
@@ -140,17 +142,19 @@ definitions:
         x-access-port: 25081
         x-auth-required: 'Y'
         x-public-api: 'Y'
-      type:
+        x-impact-subsystem: 不影响
+      filterType:
         type: string
         description: 过滤的资源类型，取值：VM-虚拟机；Disk-磁盘；File-文件；Dir-目录
         enum:
-          - VM
-          - Disk
-          - File
-          - Dir
+          - '''Disk'''
+          - '''File'''
+          - '''Dir'''
+          - '''VM'''
         x-access-port: 25081
         x-auth-required: 'Y'
         x-public-api: 'Y'
+        x-impact-subsystem: 不影响
       rule:
         type: string
         description: 过滤规则：如模糊匹配、全匹配、正则表达式等。Fuzzy-模糊匹配；Exact-精确匹配；Regex-正则表达式
@@ -170,6 +174,7 @@ definitions:
         x-access-port: 25081
         x-auth-required: 'Y'
         x-public-api: 'Y'
+        x-impact-subsystem: 不影响
       values:
         type: array
         items:
@@ -177,7 +182,7 @@ definitions:
         description: 过滤的具体内容
     required:
       - filterBy
-      - type
+      - filterType
       - rule
       - mode
       - values
@@ -186,5 +191,11 @@ definitions:
       uuid:
         type: string
         description: 恢复job的id
+        minLength: 32
+        maxLength: 64
+        x-impact-subsystem: 不影响
+        x-access-port: 25081
+        x-auth-required: 'Y'
+        x-public-api: 'Y'
     required:
       - uuid
